# magic-wormhole-exe

./: .gitignore  README.md  build-check.py  build.bat  launcher.py  pyproject.toml
.github/actions/: .gitignore
.github/actions/build-environment/: action.yml  main.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/actions/build-environment/src/: main.ts
.github/actions/release-info/: action.yml  main.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/actions/release-info/src/: main.ts
.github/actions/setup-chocolatey/: action.yml  main.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/actions/setup-chocolatey/src/: main.ts
.github/workflows/: create-executable.yml  release-chocolatey.yml  release-winget.yml  upload-chocolatey.yml
hooks/: hook-autobahn.py  hook-humanize.py
magic-wormhole/: magic-wormhole.nuspec
magic-wormhole.portable/: magic-wormhole.portable.nuspec
magic-wormhole.portable/tools/: VERIFICATION.txt  chocolateyinstall.ps1
magic-wormhole/tools/: chocolateyinstall.ps1
