[tool.poetry]
name = "wormhole"
version = "0.1.0"
description = ""
authors = ["Kyle Bloom <kyle@symless.com>"]

[tool.poetry.dependencies]
python = "^3.8"
magic-wormhole = "^0.12.0"
pyinstaller = "^4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
